# tinf19b3_calculator

./: CMakeLists.txt  main.cpp
app/classes/: Calculation.cpp  Calculation.h  Calculator.cpp  Calculator.h  CalculatorGUI.cpp  CalculatorGUI.h  abstractCalculator.cpp  abstractCalculator.h  calculator.cpp  calculator.h
app/ui/: calculator.h  calculator.ui
